tests/errors/unsigned_02.py
from lpython import u16

i: u16 = -u16(5)
